# ai-image-utils

./: .gitignore  README.md  README_FR.md  aesthetic.py  annotate.py  clusterize.py  clusterize3.py  estimate_quality.py  estimate_quality2.py  evaluate.py  gui.py  gui2.py  img_quality.py  learn_image_quality.py  learn_image_regression.py  pyproject.toml  range_images.py  sort_files.py  use.py
aesthetic_evaluator/: README.md  README_FR.md  clip_aesthetic_evaluator.py  musiq_aesthetic_evaluator.py  nima_aesthetic_evaluator.py  vit_aesthetic_evaluator.py  vlm_aesthetic_evaluator.py
clustering/: README.md  README_FR.md  cluster_by_duplicates.py  cluster_by_semantics.py
clusterize/: clusterize_best.py  clusterize_test.py
data/inputs/labeled_tiers/quality_5/: result.txt
gui/: README.md  README_FR.md  ab_vote.py  quality_annotator.py  results_dashboard.py
openspec/: project.md
openspec/specs/aesthetic-evaluation/: spec.md
openspec/specs/image-clustering/: spec.md
openspec/specs/library-management/: spec.md
openspec/specs/manual-annotation/: spec.md
openspec/specs/model-training/: spec.md
openspec/specs/pairwise-voting/: spec.md
testaesthetic-predictor/: testaesthetic-predictor.py
testcondorcet/: condorcet.py  condorcet2.py
tests/: README.md  README_FR.md  test_aesthetic_predictor.py
training/: README.md  README_FR.md  example_vit_training.py  metrics_evaluator.py  train_quality_rf.py  train_quality_vit.py
utils/: CopyTopNFiles.ps1  README.md  README_FR.md  reorganize_images_csv.py  sort_images_by_quality.py
